fix issues on iOS causing inputs:after beeing behind

--- a/uikit/style/ui-kit.css
+++ b/uikit/style/ui-kit.css
@@ -188,6 +188,7 @@ p {
   margin-top: 1.75rem;
   width: 100%;
   max-width: 400px;
+  z-index: 1;
 }
 .input-group:not(.normal_label) label {
   position: absolute;
@@ -199,7 +200,6 @@ p {
   color: var(--color-dark);
   transition: all 0.3s ease;
   transform: translateY(-50%);
-  z-index: 1;
   cursor: pointer;
 }
 
@@ -262,8 +262,23 @@ p {
   width: 100%;
   height: 100%;
   background-color: var(--color-primary);
-  z-index: -1;
+  z-index: 1;
   border-radius: 3px;
+}
+
+.input-group input,
+.input-group select {
+  position: relative;
+  z-index: 2;
+}
+.input-group label {
+  font-family: "Work Sans", sans-serif;
+  position: relative;
+  z-index: 3;
+}
+
+.input-group option {
+  font-family: "Work Sans", sans-serif;
 }
 
 input {
